# uni-page

./: .gitignore  README.md  docker-compose.yml  package-lock.json  pyproject.toml
.github/workflows/: django.yml
backend/: Dockerfile  requirements.txt
backend/about/: admin.py  models.py  tests.py  urls.py
backend/about/migrations/: 0001_initial.py  0002_alter_about_icon.py
backend/config/: settings.py  storage_backends.py  urls.py  wsgi.py
backend/healthcheck/: middleware.py
backend/inquiry/: admin.py  models.py  serializers.py  urls.py  views.py
backend/inquiry/migrations/: 0001_initial.py  0002_alter_inquiry_box_dimensions.py  0003_inquiry_message.py  0004_alter_inquiry_message.py
backend/message/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/message/migrations/: 0001_initial.py  0002_alter_message_first_name_alter_message_last_name.py  0003_alter_message_created_at_alter_message_updated_at.py
backend/projects/: models.py  tests.py
backend/projects/migrations/: 0002_alter_project_options.py
backend/technologies/: admin.py  models.py  tests.py  validators.py
backend/technologies/migrations/: 0002_auto_20230702_1750.py  0003_auto_20230703_1135.py  0004_alter_technology_options.py  0005_alter_technology_options.py
docker/: db.sql  entrypoint-manage.sh
frontend/: .env.development  .env.production  next.config.js  package-lock.json  package.json
frontend/src/components/: About.js  Contact.js  Gallery.js  Hero.js  HeroButtons.js  Inquiry.js  Inquiry_.js  Map.js  Projects.js  Technologies.js
(+7 files in other folders)
